--- a/styles/Cipher.module.css
+++ b/styles/Cipher.module.css
@@ -3,7 +3,7 @@
 }
 
 .title {
-    max-height:10vh;
+    min-height:10vh;
 }
 
 .title h1 {
@@ -13,5 +13,26 @@
     min-height: 83vh;
 }
 .footer {
+    padding-top:5vh;
     max-height: 5vh;
+}
+
+.encodedInput {
+    width: 80vw;
+    height:30vh;
+    transition: background-color 0.5s ease;
+    background-color: rgb(57, 57, 57);
+    resize: none;
+}
+
+.encodedInput:focus {
+    background-color: rgb(72, 72, 72);
+}
+
+.decodedInput {
+    width: 80vw;
+    min-height:30vh;
+    height:100%;
+    background-color: rgb(57, 57, 57);
+    resize: none;
 }
