change layout - need to add styles to this

--- a/styles/LetterFrequ.module.css
+++ b/styles/LetterFrequ.module.css
@@ -3,6 +3,10 @@
     width:100%;
 }
 
+.th {
+    background-color: #212121;
+}
+
 .td, .th {
     border: 1px solid #dddddd;
     text-align: center;
