--- a/styles/Cipher.module.css
+++ b/styles/Cipher.module.css
@@ -101,7 +101,7 @@
     flex-direction: column;
     padding-left: 2.5vw;
     padding-right: 2.5vw;
-    width:100%;
+    min-width:15vw;
 }
 
 .right h3 {
@@ -113,7 +113,11 @@
     padding: 0.75vh;
 }
 
-.keyUsed {
+.keyUsedWrapper {
     margin-top:5vh;
     text-align: center;
+}
+
+.keyUsed {
+    font-size: 0.9rem;
 }
