--- a/styles/Cipher.module.css
+++ b/styles/Cipher.module.css
@@ -20,6 +20,7 @@
 .main {
     min-height: 83vh;
     display:flex;
+    margin-bottom: 5vh;
 }
 
 /* left side */
@@ -90,6 +91,19 @@
     resize: none;
 }
 
+.inputCode form, .decodedText {
+    display:flex;
+    flex-direction: column;
+}
+
+.decodedText p {
+    margin-bottom: 0;
+}
+
+.inputCode.submitBtn {
+    align-self: center;
+}
+
 .submitBtn:hover {
     cursor:pointer;
 }
@@ -101,7 +115,8 @@
     flex-direction: column;
     padding-left: 2.5vw;
     padding-right: 2.5vw;
-    min-width:15vw;
+    width:100%;
+
 }
 
 .right h3 {
@@ -121,3 +136,70 @@
 .keyUsed {
     font-size: 0.9rem;
 }
+
+/* responsive design yay */
+@media only screen and (max-width:1050px) {
+     /* code at top
+        then other stuff
+        then analysis */
+    .main {
+        flex-direction: column;
+        align-items: center;
+    }
+    .left {
+        order:3;
+        margin-bottom: 5vh; 
+        width:100vw;
+    }
+    .left h3 {
+        margin-top: 0;
+        margin-bottom: 2.5vh;
+        width: 80vw;
+        text-align: center;
+        background-color: rgb(72, 72, 72);
+        padding: 0.75rem 0rem;
+    }
+    .analysis {
+        width:90vw;
+        align-items: center;
+    }
+    .letterTable {
+        width: 90vw;
+        font-size: 1rem;
+        display: flex;
+        justify-content: center;
+    }
+    .center {
+        order: 1;
+        margin-bottom: 10vh;
+        margin-left:0;
+        padding-left: 0;
+    }
+    .center h3 {
+        margin-top: 0;
+        margin-bottom: 2.5vh;
+        width: 80vw;
+        text-align: center;
+        background-color: rgb(72, 72, 72);
+        padding: 0.75rem 0rem;
+    }
+    .right {
+        order: 2;
+        margin-bottom: 10vh;
+    }
+    .right h3 {
+        margin-top: 0;
+        margin-bottom: 2.5vh;
+        width: 80vw;
+        text-align: center;
+        background-color: rgb(72, 72, 72);
+        padding: 0.75rem 0rem;
+    }
+}
+ @media only screen and (max-width:618px) {
+    .letterTable {
+        font-size: 0.8rem;
+        display: flex;
+        justify-content: center;
+    }
+ }
